# SchrodingerBridges

./: .gitattributes  .gitignore  ACTIVATION_SPACE_SB_PLAN.md  ACTIVE_RESEARCH_CAMPAIGN.json  ADAPTIVE_EDIT_MEMORY_FALLBACK_PLAN.md  AGENTS.md  ALTERNATIVE_PROTOCOL_REGISTRY.json  APPROXIMATE_SOLVER_PLAN.md  BRIDGE_GENERATIVE_REPLAY_PLAN.md  BUNDLE_MANIFEST.json  CANDIDATE_DIRECTION_REGISTRY.json  CAUSAL_LOCALIZATION_PLAN.md  COMPUTE_MATCHED_BASELINES_PLAN.md  CONDITIONAL_ANSWER_SPAN_CSBM_PLAN.md  CONTINUAL_DIFFUSION_EDITING_AUTONOMOUS_PLAN.md  CONTINUAL_LEARNING_ALTERNATIVES_CATALOG.md  COUNTERFACT_TEMPORAL_RESIDUAL_ADAPTATION_PLAN.md  DIFFUSIONGROW_CONTINUAL_EDITING_PLAN.md  DIFFUSION_NATIVE_PARAMETRIC_EDITOR_AUTONOMOUS_PLAN.md  DIRECTION3_AUTONOMOUS_RESEARCH_PLAN.md  DUAL_MEMORY_CONSOLIDATION_PLAN.md  EDITOR_GENERALITY_PLAN.md  EXPERIMENT_PROTOCOL_REGISTRY.json  FINAL_SELECTION_AND_REPORTING_PLAN.md  FISHER_CONSTRAINED_EDITING_PLAN.md  FUNCTIONAL_REPLAY_PLAN.md  GATED_ADAPTER_EXPANSION_PLAN.md  INTEGRATED_CANDIDATE_PLAN.md  JOINT_ANSWER_SPAN_COUPLING_PLAN.md  LEARNED_GATE_RAW_BRIDGE_PLAN.md  LOCKED_CONFIRMATION_PLAN.md  LOCKED_LLADA_CONFIRMATION_PLAN.md  MAIN_EDITOR_AND_BASELINES_PLAN.md  MASK_PATTERN_SB_PLAN.md  MASK_PATTERN_SB_PUBLICATION_AUTONOMOUS_PLAN.md  MDM_MEMIT_SB_AUTONOMOUS_RESEARCH_PLAN.md  MEMIT_REPRODUCTION_PLAN.md  MULTIMARGINAL_SB_CONSOLIDATION_PLAN.md  NEXT_DIRECTION_SELECTION_AUTONOMOUS_PLAN.md  NO_BUDGET_GUARD_MIGRATION.md  (+46 more)
runtime bridge editing/: First_Step_Build_The_Protocol_Manifests.ipynb  Step 2A - Tiny Runtime Smoke.ipynb  (+10 more)
scripts/: __init__.py  (+147 more)
(+165 files in other folders)
