[project]
name = "sb-local"
version = "0.1.0"
description = "Local utilities for Schrödinger bridge experiments on LLaDA."
requires-python = ">=3.12,<3.13"
dependencies = [
  "accelerate>=1.11.0",
  "datasets>=4.0.0",
  "matplotlib>=3.10.0",
  "pillow>=11.0.0",
  "pytest>=8.0.0",
  "sentencepiece>=0.2.0",
  "safetensors>=0.4.5",
  "torch>=2.4.0",
  "transformers==4.46.3",
]

[tool.uv]
package = false
